# new_nppi_yolo_hrnet

./: CMakeLists.txt  README.md  main.cpp
config/: cam_lf.yaml  cam_sf.yaml  camera_params.txt
src/: ccameraprocess.cpp  ccameraprocess.h
src/back_alg/: cbackcameraalg.cpp  cbackcameraalg.h  hrnetseg.cpp  hrnetseg.h
src/common/: ccameraparam.cpp  ccameraparam.h  common.h  cswitch.cpp  cswitch.h  logger.cpp  logging.h
src/driver/: cbackframe.cpp  cbackframe.h  cddscameradriver.cpp  cddscameradriver.h  cddslidar.cpp  cddslidar.h  cframe.cpp  cframe.h  cfrontframe.cpp  cfrontframe.h  cimagelist.cpp  cimagelist.h  cv4l2driver.cpp  cv4l2driver.h  cvideocapture.cpp  cvideocapture.h
src/fault_alg/: camera_fault_detection.cpp  camera_fault_detection.h  cfaultalg.cpp  cfaultalg.h
src/front_alg/: cfrontcameraalg.cpp  cfrontcameraalg.h
src/front_alg/detect/: camera_detect.cpp  camera_detect.h  yolo_common.hpp  yololayer.cu  yololayer.h
src/front_alg/distance/: ccameradis.cpp  ccameradis.h  ccdisfromlidar.cpp  ccdisfromlidar.h  cdisfromheight.cpp  cdisfromheight.h  object_height.h
